# quadro

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  LICENSE  QUADRO_SPEC.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml  security.yml
assets/: newsroom_cost.webm  ordering_system.webm  orders_cost.webm
docs/design/: concurrency.md  sponsor.md
docs/guides/: adapters.md  saga-authoring.md  sponsor-authoring.md  sponsor-decision-matrix.md  sponsor-migration.md
examples/: README.md  newsroom_cooperation.py  ordering_system.lifecycle.toml  ordering_system.py
examples/anthropic_minimal/: README.md  main.py
examples/cooperation/: README.md  main.py
examples/core/crm_sponsor/: README.md  main.py
examples/core/newsroom_cooperation/: main.py
examples/core/ordering_system/: main.py
examples/crm_sponsor/: README.md  crm.py  main.py
examples/estimator/: README.md  main.py
examples/langchain/: .env.example  requirements.txt
examples/langchain/llm_token_budget/: .env.example  README.md  main.py  render_report.py  supervisor_runtime.py  tickets.json
examples/langchain/supervisor_stage_minimal/: .env.example  main.py
examples/llm_token_budget/: .env.example  README.md  main.py  render_report.py
examples/llm_token_budget/output_sample/: REPORT.md  run_generous.json
examples/llm_token_budget/prompts/: classify.md
examples/microsoft_agent_framework/: requirements.txt  shared.py
examples/microsoft_agent_framework/llm_token_budget/: README.md  main.py  render_report.py
examples/microsoft_agent_framework/newsroom/: README.md  agents.py  article.lifecycle.toml  main.py  main_pipeline.py  producer.py  runtime.py  schemas.py  tools.py  workflows.py
examples/microsoft_agent_framework/ordering_system/: README.md  agents.py  data.py  main.py  main_pipeline.py  order.lifecycle.toml  producer.py  schemas.py  tools.py
examples/microsoft_agent_framework/workflow_stage_minimal/: main.py
examples/minimal/: .env.example  README.md  main.py  openai_reasoner.py
examples/newsroom/: README.md  article.lifecycle.toml  main_pipeline.py  producer.py  runtime.py  schemas.py  tools.py
examples/newsroom/docker/: .env.example  Dockerfile  docker-compose.debug.yml  docker-compose.yml  down.sh  entrypoint.debug.sh  entrypoint.sh  up.ps1
examples/newsroom/output/: can-mindfulness-really-lower-cortisol-what-the-research-says-about-stress-hormon.json  can-mindfulness-really-lower-cortisol-what-the-research-says-about-stress-hormon.md  how-a-10-minute-daily-mindfulness-practice-may-reshape-your-cortisol-curveand-im.json  how-a-10-minute-daily-mindfulness-practice-may-reshape-your-cortisol-curveand-im.md  how-better-sleep-rebuilds-your-brain-the-science-of-memory-focus-and-smarter-dec.json  how-better-sleep-rebuilds-your-brain-the-science-of-memory-focus-and-smarter-dec.md  the-silent-fire-how-chronic-inflammation-drives-heart-disease-diabetes-and-cogni.json  the-silent-fire-how-chronic-inflammation-drives-heart-disease-diabetes-and-cogni.md  the-silent-fire-within-how-chronic-low-grade-inflammation-quietly-drives-heart-d.json  what-actually-happens-in-your-body-during-intermittent-fastingfrom-insulin-drop.json  what-actually-happens-in-your-body-during-intermittent-fastingfrom-insulin-drop.md
examples/newsroom/output_sample/: why-strength-training-may-be-the-closest-thing-to-an-anti-aging-prescription.json
examples/newsroom/prompts/: chief.md  headline.md  ideation.md
examples/newsroom/sagas/: __init__.py  _common.py  ideation.py  research.py  review.py  writing.py
examples/ordering/: README.md  main_pipeline.py  order.lifecycle.toml  producer.py  sagas.py  tools.py
examples/ordering/docker/: .env.example  Dockerfile  docker-compose.debug.yml  down.ps1  up.ps1  (+5 more)
examples/ordering_minimal/: main.py  ordering_system.lifecycle.toml
examples/supervisor_stage_minimal/: main.py
examples/synthetic_data/: README.md  main.py  requirements.txt
examples/token_budget/: README.md  main.py  render_report.py  supervisor_runtime.py
examples/workflow_stage_minimal/: main.py
src/quadro/: __init__.py  __main__.py  dispatch.py  errors.py  estimate.py  llm_token_budget_reporting.py  log_context.py  ombudsman.py  pipeline.py  runner.py  runtime.py  ui.py
src/quadro_anthropic/: __init__.py  _internal.py  reasoner.py
src/quadro_langchain/: __init__.py  _internal.py  reasoner.py  runtime.py
src/quadro_maf/: __init__.py  _internal.py  reasoner.py  runtime.py
tests/integration/: test_chief_dispatch_registry.py  test_chief_heartbeat_filter.py  test_chief_hydration_policy.py  test_chief_serialization.py  test_newsroom_flow.py  test_newsroom_saga_run.py  test_ombudsman.py  test_ordering_saga_run.py  test_revision_cycle.py  test_revision_path.py  test_saga_runner_resume.py  test_sponsor_end_to_end.py  test_worker_board_access.py  test_worker_registration_dispatch.py
tests/unit/: test_a2a_transport.py  test_anthropic_reasoner.py  test_async_execute_fn.py  test_board_client.py  test_board_data_store.py  test_board_events.py  test_builders.py  test_chief_telemetry.py  test_contracts.py  test_errors.py  test_estimator.py  test_filtered_tasks.py  test_hydration.py  test_id_provider.py  test_idempotency.py  test_langchain_llm_token_budget_modes.py  test_langchain_runtime_plugin.py  test_langchain_token_reporter.py  test_lifecycle.py  test_lifecycle_builder.py  test_lifecycle_loader.py  test_llm_token_budget_reporting.py  test_log_context.py  test_maf_token_reporter.py  test_newsroom_workflows.py  test_ombudsman_custom_statuses.py  test_ombudsman_per_status_timeout.py  test_otel_integration.py  test_pipeline_stage_validation.py  test_reactive_wakeup.py  test_run_loop.py  test_run_loop_async.py  test_runtime.py  test_runtime_meters.py  test_runtime_plugin_contract.py  test_saga_builder.py  test_saga_compensations.py  test_saga_modifiers.py  test_saga_parallel.py  test_saga_reason_step.py  (+22 more)
(+117 files in other folders)
